fix gap between buttons in edit note

--- a/src/components/edit-note/EditNote.module.css
+++ b/src/components/edit-note/EditNote.module.css
@@ -74,7 +74,7 @@
   margin-top: 2rem !important;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .submitButton {
